# shader_reflection

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
3rd/spdlog/: CMakeLists.txt
LibShaderCompiler/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  pch.hpp
dx_headers/: xmake.lua
dxc/: CMakeLists.txt  xmake.lua
game/: CMakeLists.txt  main.cpp  pch.hpp
game/shaders/: compile.ps1  root_sig.hlsl  shader.dxc.ps.assembly  shader.dxc.vs.assembly  shader.hlsl  shader.spirv.ps.assembly  shader.spirv.vs.assembly
lib_shader_reflection/: xmake.lua
lib_shader_reflection/include/shader_reflection/: module.hpp  shader_reflection.hpp
lib_shader_reflection/src/: shader_reflection.cpp
shader_assets/: test1.hlsl  xmake.lua
shader_assets/include/shader_assets/: shaders.hpp
shader_reflector/: main.cpp  xmake.lua
spirv_reflect/: CMakeLists.txt
